# toml-bombadil

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  build.rs  codecov.yml  cog.toml  config.example.toml  config.toml  index.html  robots.txt  search_index.en.js  sitemap.xml
.github/: CODEOWNERS  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CD.yaml  CD.yml  CI.yaml  CI.yml  Release.yml  Website.yml
authors/: index.html
authors/nukesor/: index.html
authors/oknozor/: index.html
bats-tests/: HOWTO.md  tests.bat  tests.sh
bats-tests/tom_home/dotfiles/: bashrc  bombadil.toml  dummy.dot  vars.toml
blog/: index.html
blog/introducing-v2/: index.html
blog/introducing-v3/: index.html
blog/page/1/: index.html
ci/: action.sh  aur_bump.sh  build_manpage.sh
config_examples/: bombadil.example.toml  vars.example.toml
contrib/: wofi-bombadil-switch-profile.sh
docs/: index.html  package.json  pnpm-lock.yaml
docs/config-import/: index.html
docs/config-import/import/: index.html
docs/contributing/: index.html
docs/contributing/code-of-conduct/: index.html
docs/contributing/how-to-contribute/: index.html
docs/docs/: README.md  contributing.md
docs/docs/.vuepress/: config.ts
docs/docs/docs/: README.md
docs/docs/quickstart/: README.md
docs/getting-started/: index.html
docs/getting-started/introduction/: index.html
docs/getting-started/quick-start/: index.html
docs/hooks/: index.html
docs/hooks/hooks/: index.html
docs/profiles-and-themes/: index.html
docs/profiles-and-themes/profile-variables/: index.html
docs/profiles-and-themes/profiles/: index.html
docs/profiles-and-themes/profiles-overrides/: index.html
docs/template-and-variables/: index.html
docs/template-and-variables/gpg-secret/: index.html
docs/template-and-variables/variable-references/: index.html
docs/template-and-variables/variable-scope/: index.html
docs/template-and-variables/variables/: index.html
man/: bombadil.1.md
privacy-policy/: index.html
src/: cli.rs  config.rs  display.rs  dots.rs  error.rs  git.rs  gpg.rs  hook.rs  lib.rs  settings.rs  state.rs  template.pest  templating.rs  wofi.pest
src/color/: alacritty_colors.rs  mod.rs  sway_color.rs  wofi_colors.rs
src/install/: command.rs  dotfile.rs  mod.rs
src/parse/: mod.rs  wofi.rs
src/paths/: error.rs  mod.rs
src/preprocessor/: alacritty.rs  mod.rs  sway.rs  wofi.rs
src/settings/: dots.rs  imports.rs  mod.rs  profiles.rs
src/theming/: alacritty.rs  alacritty_theme.rs  display.rs  mod.rs  sway.rs  sway_theme.rs  wofi.rs  wofi_theme.rs
src/theming/default_themes/: argonaut.toml  ayu_mirage.toml
tests/: wofi_styles.css
tests/dot_files_with_imports/: bombadil.toml  import.toml
tests/dot_files_with_imports/relative_import/: import_relative.toml
tests/dotfiles_backup/: bombadil.toml
tests/dotfiles_create_dir/: bombadil.toml  vars.toml
tests/dotfiles_direct/: bombadil.toml
tests/dotfiles_full/: bombadil.toml  profile_vars.toml  template.css  vars.toml
tests/dotfiles_hard_copy/: bombadil.toml
tests/dotfiles_invalid_dot/: bombadil.toml  template  template.css
tests/dotfiles_nested/sub_dir/: template_1  template_2
tests/dotfiles_non_utf8/: bombadil.toml
tests/dotfiles_simple/: bombadil.toml
tests/dotfiles_unlink/: bombadil.toml
tests/dotfiles_vars/: bombadil.toml
tests/dotfiles_with_local_vars/: bombadil.toml
tests/dotfiles_with_meta/: bombadil.toml  meta_vars.toml
tests/dotfiles_with_multiple_nested_dir/: bombadil.toml
tests/dotfiles_with_nested_dir/: bombadil.toml
tests/dotfiles_with_profile_context/: bombadil.toml  template.css  vars.toml
tests/dotfiles_with_profiles_direct/: bombadil.toml
tests/dotfiles_with_secret/: template
tests/gpg/: private.gpg  private.pgp  public.gpg  public.pgp  trust.txt
tests/imports/: bombadil.toml  import.toml
tests/local_dot_vars/: vars.toml
tests/source_profile/: bombadil.toml
tests/var_profile/: bombadil.toml  default-vars.toml  dot  profile-vars.toml
tests/vars/: bombadil.toml  vars.toml
website/: config.toml  package.json
website/docs/: index.md  quickstart.md
(+57 files in other folders)
