[package]
name = "toml-bombadil"
version = "3.1.0"
authors = ["Paul Delafosse <paul.delafosse@protonmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/oknozor/toml-bombadil/"
homepage = "https://oknozor.github.io/toml-bombadil/"
description = """
A dotfile manager.
"""

[dependencies]
config = "0.13.2"
dirs = "4"
toml = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tera = "1"
colored = "2.0.0"
globwalk = "0.8.1"
git2 = { version = "0.14.4", features = ["vendored-openssl"] }
clap = { version = "4", features = ["derive"], optional = true }
clap_complete = { version = "4", optional = true }
lazy_static = { version = "1.4.0", optional = true }
watchexec = "2.0.2"
watchexec-filterer-ignore = "1.0.0"
ignore-files = "1.0.1"
tokio = { version = "1.24.2", features = ["macros", "rt"] }
thiserror = "1.0.37"

[features]
default = ["cli"]
cli = ["clap", "clap_complete", "lazy_static"]

[[bin]]
name = "bombadil"
path = "src/bin/bombadil.rs"
required-features = ["clap"]

[dev-dependencies]
sealed_test = "1.0.0"
speculoos = "0.10.0"
cmd_lib = "1.3.0"
pretty_assertions = "1.2.1"
indoc = "1.0.6"
