[package]
name = "toml-bombadil"
version = "4.0.0"
authors = ["Paul Delafosse <paul.delafosse@protonmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/oknozor/toml-bombadil/"
homepage = "https://oknozor.github.io/toml-bombadil/"
description = """
A dotfile manager.
"""
exclude = ["asset", "bats-tests", "ci", "docs", "website"]

[profile.release]
opt-level = 2
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
config = "0.14.0"
dirs = "5"
toml = "0.8.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_json_merge = "0.0.4"
colored_json = "5.0.0"
anyhow = "1"
tera = "1"
colored = "2.1.0"
globwalk = "0.9.1"
git2 = { version = "0.19.0", features = ["https", "vendored-libgit2", "vendored-openssl"] }
clap = { version = "4", features = ["derive"], optional = true }
clap_complete = { version = "4", optional = true }
lazy_static = { version = "1.5.0", optional = true }
watchexec = "2.3.0"
watchexec-filterer-ignore = "1.2.1"
ignore-files = "1.3.0"
tokio = { version = "1.41.0", features = ["macros", "rt"] }
thiserror = "1.0.65"
shellexpand = "3.1.0"

[features]
default = ["cli"]
cli = ["clap", "clap_complete", "lazy_static"]

[[bin]]
name = "bombadil"
path = "src/bin/bombadil.rs"
required-features = ["clap"]

[dev-dependencies]
sealed_test = "1.1.0"
speculoos = "0.11.0"
cmd_lib = "1.9.5"
pretty_assertions = "1.4.1"
indoc = "2.0.5"
