[package]
name = "toml-bombadil"
version = "4.2.0"
authors = ["Paul Delafosse <paul.delafosse@protonmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/oknozor/toml-bombadil/"
homepage = "https://oknozor.github.io/toml-bombadil/"
description = """
A dotfile manager.
"""
exclude = ["asset", "bats-tests", "ci", "docs", "website"]

[profile.release]
opt-level = 2
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
config = "0.15.11"
dirs = "6.0.0"
toml = "0.9.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json_value_merge = "2.0.1"
colored_json = "5.0.0"
anyhow = "1"
tera = "1"
colored = "3.0.0"
globwalk = "0.9.1"
git2 = { version = "0.20.1", features = ["https", "vendored-libgit2", "vendored-openssl"] }
clap = { version = "4", features = ["derive"], optional = true }
clap_complete = { version = "4", optional = true }
lazy_static = { version = "1.5.0", optional = true }
watchexec = "6.0.0"
watchexec-events = "5.0.0"
watchexec-signals = "4.0.1"
watchexec-filterer-ignore = "6.0.0"
ignore-files = "3.0.3"
tokio = { version = "1.41.0", features = ["macros", "rt"] }
thiserror = "2.0.12"
shellexpand = "3.1.0"

[features]
default = ["cli"]
cli = ["clap", "clap_complete", "lazy_static"]

[[bin]]
name = "bombadil"
path = "src/bin/bombadil.rs"
required-features = ["clap"]

[dev-dependencies]
sealed_test = "1.1.0"
speculoos = "0.13.0"
cmd_lib = "1.9.5"
pretty_assertions = "1.4.1"
indoc = "2.0.5"
